# IE577-ML

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
examples/: README.md
examples/supervised_learning/: 01_linear_ridge_lasso_regression_diabetes.html  01_linear_ridge_lasso_regression_diabetes.ipynb  02_logistic_regression_breast_cancer.html  02_logistic_regression_breast_cancer.ipynb  03_knn_iris.html  03_knn_iris.ipynb  04_decision_tree_random_forest_wine.ipynb  05_naive_bayes_breast_cancer.ipynb  06_perceptron_binary_classification.ipynb  11_linear_svm_breast_cancer.ipynb  12_gradient_boosting_regression_diabetes.ipynb
examples/unsupervised_learning/: 07_kmeans_blobs.html  07_kmeans_blobs.ipynb  (+5 more)
scripts/: add_modeling_hypotheses.py  create_dbscan_notebook.py  create_diabetes_regression_notebook.py  create_gradient_boosting_notebook.py  create_hierarchical_notebook.py  create_kmeans_notebook.py  create_knn_notebook.py  create_linear_svm_notebook.py  create_logistic_regression_notebook.py  create_naive_bayes_notebook.py  create_pca_notebook.py  create_perceptron_notebook.py  create_tree_forest_notebook.py
tests/: test_classification_metrics.py  test_dbscan.py  test_decision_tree.py  test_gradient_boosting.py  test_hierarchical.py  test_kmeans.py  test_knn.py  test_linear_regression_models.py  test_logistic_regression.py  test_naive_bayes.py  test_package_import.py  test_pca.py  test_perceptron.py  test_preprocessing_edge_cases.py  test_random_forest.py  test_regression_metrics.py  test_scalers.py  test_svm.py
(+21 files in other folders)
