[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jiayi-ml-from-scratch"
version = "0.1.0"
description = "A NumPy-based machine learning package implemented from scratch for CMOR 438 / INDE 577."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Jiayi Li" }
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter"
]

[tool.setuptools.packages.find]
where = ["src"]